--- a/frontend/src/components/CreateNewSpot/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpot/CreateNewSpot.css
@@ -1,3 +1,59 @@
 .errors {
     color: red
 }
+
+.creation {
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 300px;
+    margin-left: 300px;
+    padding: 20px;
+}
+
+
+form {
+    background: rgb(216, 215, 215);
+    padding: 20px;
+    margin: 20px;
+    border: 1px solid black;
+}
+
+label {
+    display: block;
+    margin-top: 20px;
+}
+
+input {
+    width: 100%;
+    height: 30px;
+    padding: 5px;
+    margin-top: 10px;
+    border: 1px solid black;
+}
+
+.create-spot-button {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: rgb(255, 0, 0);
+    color: white;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.create-spot-button:hover {
+    background-color: rgb(255, 146, 146);
+}
+
+.errors {
+    color: red;
+    margin: 5px 0;
+}
+
+.lat, .lng {
+    display: inline-block;
+    width: 127px;
+}
