--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -24,55 +24,36 @@
   }
 
   .landing a {
-    text-decoration: none; /* Removes underline from links */
-    color: inherit; /* Inherits color from parent elements */
-    width: calc(25% - 40px); /* Sets width for 4 columns layout, adjust margin accordingly */
+    text-decoration: none;
+    width: calc(25% - 40px);
     margin: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #c8c7c7;
     border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
 
   .landing img {
     width: 100%;
     height: 250px;
-    display: block; /* Removes bottom space/margin */
+    display: block;
   }
 
   .spot-details {
     padding: 8px 12px;
-    background-color: #fff;
-    border-bottom: 1px solid #ccc;
+    background-color: white;
+    border-bottom: 1px solid rgb(182, 181, 181);
+    display: flex;
+    justify-content: space-between;
   }
 
   .spot-details .city,
   .spot-details .rating {
-    display: block; /* Makes elements stack vertically */
+    display: block;
     margin-bottom: 4px;
+    color: black
   }
 
   .price {
-    margin-top: auto; /* Pushes the price to the bottom */
+    margin-top: auto;
     font-weight: bold;
-    color: #000;
-  }
-
-  /* Responsive adjustments */
-  @media (max-width: 1200px) {
-    .landing a {
-      width: calc(33.333% - 40px); /* 3 columns */
-    }
-  }
-
-  @media (max-width: 900px) {
-    .landing a {
-      width: calc(50% - 40px); /* 2 columns */
-    }
-  }
-
-  @media (max-width: 600px) {
-    .landing a {
-      width: 100%; /* 1 column */
-    }
+    color: black;
   }
