--- a/frontend/src/components/ManageSpots/ManageSpots.css
+++ b/frontend/src/components/ManageSpots/ManageSpots.css
@@ -19,58 +19,57 @@
 
 
 .card {
-    border: 1px solid #ccc; /* Add border around each card */
-    border-radius: 8px; /* Optional: if you want rounded corners */
-    overflow: hidden; /* Ensures the children don't overflow the rounded corners */
+    border: 1px solid #d4d4d4;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
 .card img {
-    width: 100%; /* Ensure image takes up entire container width */
-    height: 200px; /* Fixed height for consistency */
-    object-fit: cover; /* Ensures the image covers the area properly */
-    background: #f3f3f3; /* Placeholder background color */
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    background: white;
 }
 
 .card .spot-details {
     padding: 15px;
-    background-color: #f9f9f9; /* Light grey background for details section */
-    border-bottom: 1px solid #ccc; /* Line separating details from price */
+    background-color: #f9f9f9;
+    border-bottom: 1px solid #ccc;
 }
 
 .card .spot-details .city, .card .spot-details .rating {
-    display: block; /* Each detail on its own line */
-    margin-bottom: 5px; /* Spacing between details */
+    display: block;
+    margin-bottom: 5px;
 }
 
 .card .price {
     padding: 15px;
-    background-color: #fff; /* White background for the price */
-    font-size: 18px; /* Larger font size for price */
-    font-weight: bold; /* Make price bold */
-    display: flex; /* Flex layout to align buttons and price */
-    justify-content: space-between; /* Space out price and buttons */
+    background-color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 
 .card button {
     padding: 10px 20px;
-    margin: 0 5px; /* Spacing between buttons */
+    margin: 0 5px;
     border: none;
     color: white;
     cursor: pointer;
-    text-decoration: none; /* Remove underline from buttons if any */
-    border-radius: 4px; /* Rounded corners for buttons */
+    text-decoration: none;
+    border-radius: 4px;
 }
 
 .card .update {
-    background-color: #4CAF50; /* Green background for update */
+    background-color: gray;
 }
 
 .card .delete {
-    background-color: #f44336; /* Red background for delete */
+    background-color: gray;
 }
 
-/* Hover effects for buttons */
 .card button:hover {
     opacity: 0.8;
 }
