--- a/frontend/src/components/CreateNewSpot/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpot/CreateNewSpot.css
@@ -13,12 +13,34 @@
     padding: 20px;
 }
 
+.price{
+    margin-left: 0;
+}
+
+.heading {
+    align-self: flex-start;
+    margin-left: 20px
+}
+
+.city, .state, .lat, .lng {
+    display: inline-block;
+    width: 313px;
+}
+
+.line {
+    margin-right: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 0;
+    border-bottom: 3px solid black;
+    width: 100%;
+}
 
 form {
-    background: rgb(216, 215, 215);
+    background: white;
     padding: 20px;
-    margin: 20px;
-    border: 1px solid black;
+    padding-top: 0;
+    /* margin: 20px; */
 }
 
 label {
@@ -29,18 +51,22 @@ label {
 input {
     width: 100%;
     height: 30px;
-    padding: 5px;
+    padding-right: 0px;
     margin-top: 10px;
     border: 1px solid black;
 }
 
+.create-spot-button-div {
+    display: flex;
+    justify-content: center;
+}
+
 .create-spot-button {
     display: block;
-    width: 100%;
+    width: auto;
     padding: 10px;
     background-color: rgb(255, 0, 0);
     color: white;
-    margin-top: 20px;
     cursor: pointer;
 }
 
@@ -53,7 +79,19 @@ input {
     margin: 5px 0;
 }
 
-.lat, .lng {
-    display: inline-block;
-    width: 127px;
+.price-input {
+    display: flex;
+    justify-content: space-around;
+}
+
+.price-input-box {
+    margin-top: 0px;
+}
+
+.dollar-sign {
+    margin: 10px 9px;
+}
+
+.description-box {
+    padding-bottom: 100px;
 }
