--- a/frontend/src/components/PostReview/PostReviewModal.css
+++ b/frontend/src/components/PostReview/PostReviewModal.css
@@ -4,6 +4,8 @@
     margin: auto;
     background: white;
     padding: 20px;
+    border-radius: 8px;
+    border: 5px solid black;
 }
 
 .post-review h3 {
