--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -39,19 +39,20 @@
 }
 
 .reserve-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     align-self: flex-end;
     border: 1px solid black;
     border-radius: 8px;
     padding: 20px;
     margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 1.5fr .5fr .1fr;
+    grid-template-rows: repeat(2, .5fr);
 }
 
-.reserve-box span, .reserve-box button {
+
+/* .reserve-box span, .reserve-box button {
     margin-right: 10px;
-}
+} */
 
 .reserve-box button {
     padding: 10px 20px;
@@ -61,6 +62,9 @@
     border-radius: 4px;
     cursor: pointer;
     font-weight: bold;
+    /* width: 500px; */
+    grid-column-start: 1;
+    grid-column-end: 4;
 }
 
 .reserve-box button:hover {
@@ -83,4 +87,24 @@
 .reviews p {
     color: rgb(56, 55, 55);
     margin-bottom: 10px;
+}
+
+.rating {
+    margin-left: 50px;
+    margin-right: 5px;
+    padding-right: 0;
+    margin-bottom: 10px;
+}
+
+.price {
+    margin-bottom: 10px;
+}
+
+.numReviews {
+    margin-top: 1px;
+    grid-column-start: 4;
+}
+
+.delete-review {
+    background-color: black;
 }
