--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -5,3 +5,18 @@
 .signup-form {
     height: auto;
 }
+
+.signup-text {
+    display: flex;
+    justify-content: center;
+}
+
+.button {
+    width: 100%;
+    margin-top: 20px;
+    background-color: red;
+    color: white;
+    height: 40px;
+    cursor: pointer;
+    border-radius: 8px;
+}
